--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -2,6 +2,7 @@
 agp = "8.3.0"
 kotlin = "2.1.0"
 coreKtx = "1.13.1"
+kotlinxCoroutinesSwing = "1.10.1"
 lifecycleRuntimeKtx = "2.8.2"
 activityCompose = "1.9.0"
 compose-plugin = "1.6.11"
@@ -11,6 +12,7 @@ maven-publish="0.28.0"
 androidx-core-ktx = { group = "androidx.core", name = "core-ktx", version.ref = "coreKtx" }
 androidx-lifecycle-runtime-ktx = { group = "androidx.lifecycle", name = "lifecycle-runtime-ktx", version.ref = "lifecycleRuntimeKtx" }
 androidx-activity-compose = { group = "androidx.activity", name = "activity-compose", version.ref = "activityCompose" }
+kotlinx-coroutines-swing = { module = "org.jetbrains.kotlinx:kotlinx-coroutines-swing", version.ref = "kotlinxCoroutinesSwing" }
 
 [plugins]
 android-application = { id = "com.android.application", version.ref = "agp" }
