feat: add maven publish feature

--- a/gradle.properties
+++ b/gradle.properties
@@ -21,12 +21,18 @@ kotlin.code.style=official
 # resources declared in the library itself and none from the library's dependencies,
 # thereby reducing the size of the R class for that library
 android.nonTransitiveRClass=true
+android.suppressUnsupportedCompileSdk=35
 #MPP
 kotlin.mpp.androidSourceSetLayoutVersion=2
 kotlin.mpp.enableCInteropCommonization=true
 kotlin.native.ignoreDisabledTargets=true
 
-VERSION_NAME=1.0.0
 
 # dokka
 org.jetbrains.dokka.experimental.gradle.pluginMode=V2Enabled
+
+mavenCentralUsername=8MjoCsfz
+mavenCentralPassword=tXZtol1VGg2iee/yt6zzxs8xZ1ecSD1vymv9DtntXpMf
+signing.keyId=E9C0E414
+signing.password=Fuckyou18!
+signing.secretKeyRingFile=/Users/ansehun/Desktop/KMP/handwriting/signing.gpg
