--- a/.github/workflows/publish-docs.yml
+++ b/.github/workflows/publish-docs.yml
@@ -2,7 +2,9 @@ name: Publish docs
 
 on:
   push:
-    - main
+    tags:
+      - v[1-9]+.[0-9]+.[0-9]+
+
 jobs:
   deploy_docs:
     runs-on: ubuntu-latest
