--- a/.github/workflows/dokka-docs.yml
+++ b/.github/workflows/dokka-docs.yml
@@ -1,25 +1,27 @@
-name: Generate and Publish Dokka Docs
+name: Publish docs
 
 on:
-  # workflow_dispatch: # Uncomment this to enable manual trigger instead
   push:
     tags:
-      - 'v*.*.*'  # Runs on version tags (e.g., v1.0.0)
+      - v1.0.0
 
 jobs:
-  build:
+  deploy_docs:
     runs-on: ubuntu-latest
-
     steps:
-      - name: Checkout repository
-        uses: actions/checkout@v3
+      - uses: actions/checkout@v4
 
-      - name: Set up JDK 11
-        uses: actions/setup-java@v3
+      - name: Setup Java
+        uses: actions/setup-java@v4
         with:
-          java-version: '11'
+          java-version: '17'
+          distribution: 'adopt'
 
-      - name: Generate documentation
-        uses: ./.github/actions/document
+      - name: Generate docs
+        run: ./gradlew dokkaGeneratePublicationHtml
+
+      - name: Deploy
+        uses: peaceiris/actions-gh-pages@v4
         with:
-          token: '${{ secrets.GH_PAT }}'
+          github_token: ${{ secrets.GT_PAT }}
+          publish_dir: ./docs
