--- a/.github/workflows/publish-document.yml
+++ b/.github/workflows/publish-document.yml
@@ -2,26 +2,29 @@ name: Publish document
 
 on:
   push:
-    tags:
-      - v[1-9]+.[0-9]+.[0-9]+
+    branches:
+      - main
+  workflow_dispatch:
 
 jobs:
-  deploy_docs:
-    runs-on: ubuntu-latest
+  publish_dokka:
+    name: Generate dokka docs
+    runs-on: ubuntu-24.04
     steps:
-      - uses: actions/checkout@v4
-
-      - name: Setup Java
-        uses: actions/setup-java@v4
+      - name: Check out code
+        uses: actions/checkout@v4.2.2
         with:
-          java-version: '17'
-          distribution: 'adopt'
-
-      - name: Generate docs
+          ref: main
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4.7.0
+        with:
+          distribution: adopt
+          java-version: 17
+      - name: Generate Dokka HTML docs
         run: ./gradlew dokkaGeneratePublicationHtml
-
-      - name: Deploy
+      - name: Deploy to GitHub pages
         uses: peaceiris/actions-gh-pages@v4
         with:
           github_token: ${{ secrets.GT_PAT }}
           publish_dir: ./docs
+          publish_branch: docs-page
