--- a/.github/workflows/publish-maven-central.yml
+++ b/.github/workflows/publish-maven-central.yml
@@ -1,27 +1,36 @@
 name: Publish Maven Central
 
 on:
-  push:
-    tags:
-      - v*.*.*
+  release:
+    types: [ released ]
+  workflow_dispatch:
 
 jobs:
-  maven_central:
-    name: Publish and release to maven central
-    runs-on: macos-latest
+  publish:
+    name: Snapshot build and publish
+    runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v4
+      - name: Check out code
+        uses: actions/checkout@v4.2.2
 
-      - name: Setup Java
-        uses: actions/setup-java@v4
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4.7.0
         with:
-          java-version: '17'
-          distribution: 'adopt'
+          distribution: 'zulu'
+          java-version: 17
 
-      - name: Publish and release
-        run: ./gradlew publishAndReleaseToMavenCentral --no-configuration-cache
+      - name: Grant Permission to Execute Gradle
+        run: chmod +x gradlew
+
+      - name: Release build
+        run: ./gradlew assemble --scan -x :benchmark:pixel6api31Setup -x :benchmark:pixel6api31NonMinifiedReleaseAndroidTest -x :benchmark:collectNonMinifiedReleaseBaselineProfile
+
+      - name: Publish to MavenCentral
+        run: |
+          ./gradlew publishAllPublicationsToMavenCentral --no-configuration-cache
         env:
           ORG_GRADLE_PROJECT_mavenCentralUsername: ${{ secrets.MAVEN_CENTRAL_USERNAME }}
           ORG_GRADLE_PROJECT_mavenCentralPassword: ${{ secrets.MAVEN_CENTRAL_PASSWORD }}
-          ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.SIGNING_IN_MEMORY_KEY }}
-          ORG_GRADLE_PROJECT_signingInMemoryKeyPassword: ${{ secrets.SIGNING_IN_MEMORY_PASSWORD }}
+          ORG_GRADLE_PROJECT_signingInMemoryKeyId: ${{ secrets.SIGNING_IN_MEMORY_KEY }}
+          ORG_GRADLE_PROJECT_signingInMemoryKeyPassword: ${{ secrets.SIGNING_PASSWORD }}
+          ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.SIGNING_KEY }}
