--- a/.github/workflows/build-gradle.yml
+++ b/.github/workflows/build-gradle.yml
@@ -7,6 +7,21 @@ on:
     branches: [ main ]
 
 jobs:
+  lint:
+    name: Spotless check
+    runs-on: ubuntu-latest
+    steps:
+      - name: Check out code
+        uses: actions/checkout@v4.2.2
+      - name: Set up JDK
+        uses: actions/setup-java@v4.7.0
+        with:
+          distribution: zulu
+          java-version: 17
+      - uses: gradle/gradle-build-action@v3.5.0
+      - name: spotless
+        run: ./gradlew spotlessCheck
+
   build:
     runs-on: ubuntu-latest
     steps:
