--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,5 @@
 [versions]
-agp = "8.3.2"
+agp = "8.8.2"
 kotlin = "2.1.10"
 coreKtx = "1.15.0"
 kotlinxCoroutinesSwing = "1.10.1"
@@ -8,6 +8,7 @@ activityCompose = "1.10.1"
 compose-plugin = "1.7.3"
 maven-publish="0.30.0"
 dokka = "2.0.0"
+spotless = "7.0.2"
 
 compileSdk = "35"
 targetSdk = "35"
@@ -28,3 +29,4 @@ compose-compiler = { id = "org.jetbrains.kotlin.plugin.compose", version.ref = "
 kotlinMultiplatform = { id = "org.jetbrains.kotlin.multiplatform", version.ref = "kotlin" }
 dokka = { id = "org.jetbrains.dokka", version.ref = "dokka" }
 vanniktech-maven-publish = { id = "com.vanniktech.maven.publish", version.ref = "maven-publish" }
+spotless = { id = "com.diffplug.spotless", version.ref = "spotless" }
