--- a/.github/workflows/publish-maven-central.yml
+++ b/.github/workflows/publish-maven-central.yml
@@ -1,29 +1,24 @@
 name: Publish Maven Central
 
 on:
-  release:
-    types: [ released ]
-  workflow_dispatch:
-
+  push:
+    branches:
+      - master
 jobs:
-  publish:
-    name: Snapshot build and publish
+  build:
     runs-on: ubuntu-latest
     steps:
-      - name: Check out code
-        uses: actions/checkout@v4.2.2
-
-      - name: Set up JDK 17
-        uses: actions/setup-java@v4.7.0
+      - uses: actions/checkout@v2
+      - name: Extract Version
+        run: echo "##[set-output name=version;]$(echo '${{ github.event.head_commit.message }}' | egrep -o '[0-9]{1,3}\.[0-9]{1,3}\.[0-9]{1,3}')"
+        id: extract_version_name
+      - name: Generate Release
+        uses: actions/create-release@v1
+        env:
+          GITHUB_TOKEN: ${{ secrets.GT_PAT }}
         with:
-          distribution: 'zulu'
-          java-version: 17
-
-      - name: Grant Permission to Execute Gradle
-        run: chmod +x gradlew
-
-      - name: Release build
-        run: ./gradlew build
+          tag_name: ${{ steps.extract_version_name.outputs.version }}
+          release_name: ${{ steps.extract_version_name.outputs.version }}
 
       - name: Publish to MavenCentral
         run: |
@@ -34,3 +29,4 @@ jobs:
           ORG_GRADLE_PROJECT_signingInMemoryKeyId: ${{ secrets.SIGNING_IN_MEMORY_KEY_ID }}
           ORG_GRADLE_PROJECT_signingInMemoryKeyPassword: ${{ secrets.SIGNING_IN_MEMORY_KEY_PASSWORD }}
           ORG_GRADLE_PROJECT_signingInMemoryKey: ${{ secrets.SIGNING_IN_MEMORY_KEY }}
+
