--- a/gradle.properties
+++ b/gradle.properties
@@ -6,13 +6,12 @@
 # http://www.gradle.org/docs/current/userguide/build_environment.html
 # Specifies the JVM arguments used for the daemon process.
 # The setting is particularly useful for tweaking memory settings.
-org.gradle.jvmargs=-Xmx4g -XX:+HeapDumpOnOutOfMemoryError -XX:+UseParallelGC -XX:MaxMetaspaceSize=512m -Dkotlin.daemon.jvm.options=-XX:MaxMetaspaceSize=1g -Dlint.nullness.ignore-deprecated=true
+org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. For more details, visit
 # https://developer.android.com/r/tools/gradle-multi-project-decoupled-projects
-org.gradle.caching=true
 org.gradle.parallel=true
-org.gradle.configureondemand=true# AndroidX package structure to make it clearer which packages are bundled with the
+# AndroidX package structure to make it clearer which packages are bundled with the
 # Android operating system, and which are packaged with your app's APK
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
 android.useAndroidX=true
@@ -34,4 +33,3 @@ mavenCentralPassword=tXZtol1VGg2iee/yt6zzxs8xZ1ecSD1vymv9DtntXpMf
 signing.keyId=E9C0E414
 signing.password=Fuckyou18!
 signing.secretKeyRingFile=/Users/ansehun/Desktop/KMP/handwriting/signing.gpg
-org.gradle.configuration-cache=true
