--- a/gradle.properties
+++ b/gradle.properties
@@ -10,7 +10,7 @@ org.gradle.jvmargs=-Xmx2048m -Dfile.encoding=UTF-8
 # When configured, Gradle will run in incubating parallel mode.
 # This option should only be used with decoupled projects. For more details, visit
 # https://developer.android.com/r/tools/gradle-multi-project-decoupled-projects
-# org.gradle.parallel=true
+org.gradle.parallel=true
 # AndroidX package structure to make it clearer which packages are bundled with the
 # Android operating system, and which are packaged with your app's APK
 # https://developer.android.com/topic/libraries/support-library/androidx-rn
@@ -26,11 +26,8 @@ android.suppressUnsupportedCompileSdk=35
 kotlin.mpp.androidSourceSetLayoutVersion=2
 kotlin.mpp.enableCInteropCommonization=true
 kotlin.native.ignoreDisabledTargets=true
-
-
 # dokka
 org.jetbrains.dokka.experimental.gradle.pluginMode=V2Enabled
-
 mavenCentralUsername=8MjoCsfz
 mavenCentralPassword=tXZtol1VGg2iee/yt6zzxs8xZ1ecSD1vymv9DtntXpMf
 signing.keyId=E9C0E414
