Modify github action

--- a/.github/workflows/build-gradle.yml
+++ b/.github/workflows/build-gradle.yml
@@ -37,4 +37,5 @@ jobs:
         run: chmod +x ./gradlew
 
       - name: Android build
-        run: ./gradlew build
+        run: ./gradlew assembleDebug -x :baselineprofile:assemble
+
